--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -11,6 +11,7 @@ spring:
       platform: h2
       mode: always
       dataLocations: classpath:db/data.sql
-
+  flyway:
+    enabled: false
 ## パラメータの値をログに表示 ex.) binding parameter [1] as [INTEGER] - [1]
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
